[gd_scene load_steps=2 format=2]

[ext_resource path="res://main_menu.gd" type="Script" id=1]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="StartGame" type="Button" parent="."]
margin_left = 388.0
margin_top = 156.0
margin_right = 583.0
margin_bottom = 315.0
rect_pivot_offset = Vector2( 120, 104 )
text = "Start Game"

[node name="CreateLobby" type="Button" parent="."]
margin_left = 275.0
margin_top = 346.0
margin_right = 470.0
margin_bottom = 505.0
rect_pivot_offset = Vector2( 120, 104 )
text = "Create Lobby"

[node name="ShowLobbies" type="Button" parent="."]
margin_left = 503.0
margin_top = 348.0
margin_right = 698.0
margin_bottom = 507.0
rect_pivot_offset = Vector2( 120, 104 )
text = "Show Lobbies"

[node name="Lobbies" type="VBoxContainer" parent="."]
margin_left = 56.0
margin_top = 129.0
margin_right = 212.0
margin_bottom = 507.0

[connection signal="pressed" from="StartGame" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CreateLobby" to="." method="_on_CreateLobby_pressed"]
[connection signal="pressed" from="ShowLobbies" to="." method="_on_ShowLobbies_pressed"]
